--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductPartialView.cshtml
@@ -11,6 +11,7 @@
                 <tr class="text-center">
                     <th style="vertical-align:middle">#SL</th>
                     <th style="vertical-align:middle" class="hide"></th>
+                    <th style="vertical-align:middle" class="hide"></th>
                     <th style="vertical-align:middle">Organization Name</th>
                     <th style="vertical-align:middle">Product Name</th>
                     <th style="vertical-align:middle">EntryUser</th>
@@ -22,21 +23,22 @@
                 @foreach (var item in Model)
                 {
                     SL = SL + 1;
-                    <tr>
+                <tr>
 
-                        <td class="text-center text-bold">@SL</td>
-                        <td class="hide">@item.FinishGoodProductId</td>
-                        <td class="text-center">@item.OrganizationName</td>
-                        <td class="text-center">@item.FinishGoodProductName</td>
-                        <td class="text-center">@item.UserName</td>
-                        <td class="text-center">@item.Status</td>
-                        <td class="text-center">
-                            @*@if (privilege.Edit)
-                                {*@
-                            <a href="#" class="btn btn-warning btn-sm data-edit-item-unit" style="line-height:1" data-edit-item-Depot="@item.FinishGoodProductId"><i class="fa fa-pen"></i> Edit</a>
-                            @*}*@
-                        </td>
-                    </tr>
+                    <td class="text-center text-bold">@SL</td>
+                    <td class="hide">@item.FinishGoodProductId</td>
+                    <td class="hide">@item.OrganizationId</td>
+                    <td class="text-center">@item.OrganizationName</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.UserName</td>
+                    <td class="text-center">@item.Status</td>
+                    <td class="text-center">
+                        @*@if (privilege.Edit)
+            {*@
+                        <a href="#" class="btn btn-warning btn-sm data-edit-item-Product" style="line-height:1" data-edit-item-Product="@item.FinishGoodProductId"><i class="fa fa-pen"></i> Edit</a>
+                        @*}*@
+                    </td>
+                </tr>
                 }
 
                 @if (Model.Count() == 0)
