--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -219,7 +219,7 @@
             hddepotId.val(td1);
             ddlOrganizationName.val(td2);
             ddlDepotName.val(td4);
-            ddlStatus.val(t6);
+            ddlStatus.val(td6);
             //ddlStatus.prop("checked", false);
             //if (td6.toLowerCase() === 'active') {
             //    ddlStatus.prop("checked", true);
