--- a/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
@@ -55,27 +55,39 @@
 
             <div class="modal-body">
                 <form id="bankForm">
-                    <input type="hidden" id="hiddenBank" />
+                    <input type="hidden" id="hiddenBankId" />
                     <div class="form-row">
-                        <div class="form-group col-md-8">
+                        <div class="form-row">
                             <label for="ddlOrganizationName" class="control-label">Organization Name</label>
                             @Html.DropDownList("ddlOrganizationName", (IEnumerable<SelectListItem>)ViewBag.ddlOrganizationName, "--Select OrgName--", new { @class = "form-control form-control-sm" })
                             <span class="error hide required-OrganizationName font-weight-bold">Input OrganizatinName!</span>
                         </div>
-                        <div class="form-group col-md-8">
+                        <div class="form-row">
                             <label for="ddlBankName" class="control-label">Bank Name</label>
                             <input type="text" id="ddlBankName" class="form-control form-control-sm" />
                             <span class="error hide required-BankName font-weight-bold">Input Bank Name!</span>
 
                         </div>
-                        <div class="form-group col-md-8">
+                        <div class="form-row">
                             <label for="ddlAccountNumber" class="control-label">Account Number</label>
                             <input type="text" id="ddlAccountNumber" class="form-control form-control-sm" />
                             <span class="error hide required-AccountNumber font-weight-bold">Input AccountNumber!</span>
 
                         </div>
+                        <div class="form-row">
+                            <label for="ddlMobileNumber" class="control-label">Mobile Number</label>
+                            <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" />
+                            <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Number!</span>
 
-                        <div class="form-group col-md-5">
+                        </div>
+                        <div class="form-row">
+                            <label for="ddlEmailAddress" class="control-label">Email Address</label>
+                            <input type="text" id="ddlEmailAddress" class="form-control form-control-sm" />
+                            <span class="error hide required-EmailAddress font-weight-bold">Input Email Address!</span>
+
+                        </div>
+
+                        <div class="form-row col-6">
                             <label for="ddlStatus" class="control-label">Status</label>
                             <select class="form-control form-control-sm" id="ddlStatus">
                                 <option value="Active">Active</option>
@@ -96,7 +108,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-danger float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-                <button type="submit" class="btn btn-outline-success float-right" id="banksaveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextBank">Save</span> </button>
+                <button type="submit" class="btn btn-outline-success float-right" id="bankSaveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextBank">Save</span> </button>
             </div>
 
         </div>
@@ -109,11 +121,21 @@
 <script type="text/javascript">
 
     //BankSetup
-    var hiddenBank = $("#hiddenBank");
+    var hiddenBankId = $("#hiddenBankId");
+    var ddlBankName = $("#ddlBankName");
+    var ddlStatus = $("#ddlStatus");
+    var ddlEmailAddress = $("#ddlEmailAddress");
+    var ddlMobileNumber = $("#ddlMobileNumber");
+    var ddlAccountNumber = $("#ddlAccountNumber");
+    var ddlOrganizationName = $("#ddlOrganizationName");
+    
 
     function OpenModals() {
         $("#spanModalHeading").text('Create New Bank');
         $("#bankModal").modal('show');
+        $("#spanSaveTextBank").text('Save');
+        $(".error").addClass("hide");
+
     }
 
 
@@ -124,9 +146,62 @@
         OpenModals()
     });
 
+    $("#bankSaveButton").click(function (e) {
 
+        e.preventDefault();
+        $(".error").addClass("hide");
 
+        if (ValidationForm() == true) {
+            var data = JSON.stringify({ BankId: TryParseInt(hiddenBankId.val(), 0), OrganizationId: TryParseInt(ddlOrganizationName.val(), 0), BankName: ddlBankName.val(), Status: ddlStatus.val(), AccountNumber: ddlAccountNumber.val(), MobileNumber: ddlMobileNumber.val(), Email: ddlEmailAddress.val() });
+            console.log(data);
+            $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveBankInfo', data, getToken())).then(function (res, status) {
+                console.log(status);
+                console.log(res);
+                if (res == true) {
+                    $("#bankModal").modal("toggle");
+                    toastrSuccessAlert(execuStatus.successSave);
+                    
+                }
+                else {
+                    toastrErrorAlert(execuStatus.fail);
+                }
+                enable("#bankSaveButton");
+            }).fail(function (err) {
+                console.log(err);
+                enable("#bankSaveButton");
+            });
 
+        }
+
+    })
+
+    function ValidationForm() {
+        Isvalid = true;
+        $('.error').addClass("hide");
+        if ($.trim(ddlOrganizationName.val()) == 0) {
+            $('.required-OrganizationName').removeClass("hide");
+            Isvalid = false;
+        }
+        if ($.trim(ddlBankName.val()) == 0) {
+            $('.required-BankName').removeClass("hide");
+            Isvalid = false;
+        }
+        if ($.trim(ddlEmailAddress.val()) == '') {
+            $('.required-EmailAddress').removeClass("hide");
+            Isvalid = false;
+        }
+        if ($.trim(ddlMobileNumber.val()) == 0) {
+            $('.required-MobileNumber').removeClass("hide");
+            Isvalid = false;
+        }
+        if ($.trim(ddlAccountNumber.val()) == 0) {
+            $('.required-AccountNumber').removeClass("hide");
+            Isvalid = false;
+        }
+
+        return Isvalid
+
+    }
 
 
     </script>
