--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
@@ -57,12 +57,12 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header alert-secondary">
-                <h4 id="modalHeading" class="modal-title"><span id="spanModalHeadProduct"></span></h4>
+                <h4 id="modalHeading" class="modal-title"><span id="spanModalHeadSupplier"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
                 <form id="formdepot">
-                    <input type="hidden" id="hdproductId" />
+                    <input type="hidden" id="hdSupplierId" />
                     <div class="form-row">
                         <div class="form-group col-md-8">
                             <label for="ddlOrganizationName" class="control-label">OrganizationName</label>
@@ -71,9 +71,18 @@
                             <span class="error hide duplicate-organizatinName font-weight-bold">Already OrganizatinName Exist!</span>
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="ddlProductName" class="control-label">Product Name</label>
-                            <input type="text" id="ddlProductName" class="form-control form-control-sm" />
-                            <span class="error hide required-ProductName font-weight-bold">Input Product Name!</span>
+                            <label for="ddlSupplierName" class="control-label">Supplier Name</label>
+                            <input type="text" id="ddlSupplierName" class="form-control form-control-sm" />
+                            <span class="error hide required-SupplierName font-weight-bold">Input Supplier Name!</span>
+                        </div>
+                        <div class="form-group col-md-8">
+                            <label for="ddlMobileName" class="control-label">Mobile Name</label>
+                            <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" onkeypress="return isNumber(event)" />
+                            <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Name!</span>
+                        </div>
+                        <div class="form-group col-md-8">
+                            <label for="ddlAddress" class="control-label">Address</label>
+                            <input type="text" id="ddlAddress" class="form-control form-control-sm" />
                         </div>
                         <div class="form-group col-md-5">
                             <label for="ddlStatus" class="control-label">Status</label>
@@ -99,7 +108,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="saveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextProduct">Save</span> </button>
+                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="saveButton"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextSupplier">Save</span> </button>
             </div>
         </div>
     </div>
@@ -110,31 +119,34 @@
     <script type="text/javascript">
 
         //DepotList
-        var hdproductId = $("#hdproductId");
+        var hdSupplierId = $("#hdSupplierId");
         var searchByAny = $("#searchByAny");
         var ddlOrganizationName = $("#ddlOrganizationName");
         var ddlStatus = $("#ddlStatus");
-        var ddlProductName = $("#ddlProductName");
+        var ddlSupplierName = $("#ddlSupplierName");
+        var ddlMobileNumber = $("#ddlMobileNumber");
+        var ddlAddress = $("#ddlAddress");
+
         $(document).ready(function () {
-            LoadProductDataTable()
+            LoadProductSupplierDataTable()
         })
         function LoadDataInitializer() {
-            LoadProductDataTable();
+            LoadProductSupplierDataTable();
         }
 
         //#region Warehouse
 
         searchByAny.keyup(function () {
-            LoadProductDataTable()
+            LoadProductSupplierDataTable()
         })
         //function LoadDataInitializer() {
         //searchByAny.keyup(function () {
         //    LoadDepotDataTable();
         //})
 
-        function LoadProductDataTable() {
+        function LoadProductSupplierDataTable() {
             var data = { flag: 'Search', name: $.trim(searchByAny.val()) }
-            $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/GetFinishGoodProduct', data)).then(function (res, status) {
+            $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/GetFinishGoodProductSupplierList', data)).then(function (res, status) {
                 console.log(res);
                 if (status === "success") {
                     $("#dataContainer").empty();
@@ -150,16 +162,16 @@
             $(".error").addClass("hide");
             if (formValidation() == true) {
                 debugger;
-                var data = JSON.stringify({ FinishGoodProductId: TryParseInt(hdproductId.val(), 0),OrganizationId: TryParseInt(ddlOrganizationName.val(), 0), FinishGoodProductName: ddlProductName.val(), Status: ddlStatus.val() });
+                var data = JSON.stringify({ FinishGoodSupplierId: TryParseInt(hdSupplierId.val(), 0), OrganizationId: TryParseInt(ddlOrganizationName.val(), 0), FinishGoodSupplierName: ddlSupplierName.val(), MobileNumber: ddlMobileNumber.val(), Address: ddlAddress.val(), Status: ddlStatus.val() });
                 console.log(data);
-                $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveFinishGoodProduct', data, getToken())).then(function (res, status) {
+                $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveFinishGoodProductSupplier', data, getToken())).then(function (res, status) {
                     console.log(status);
                     console.log(res);
                     if (res == true) {
                         //message("#msg1", "#modalWarehouse");
-                        $("#modalProduct").modal("toggle");
+                        $("#modalSupplier").modal("toggle");
                         toastrSuccessAlert(execuStatus.successSave);
-                        LoadProductDataTable();
+                        LoadProductSupplierDataTable();
                     }
                     else {
                         //message("#msg2");
@@ -174,7 +186,7 @@
 
         })
 
-        $(document).on("click", "a.data-edit-item-Product", function (e) {
+        $(document).on("click", "a.data-edit-item-Supplier", function (e) {
             e.preventDefault()
             ClearCtrl();
             var row = $(this).parent().parents('tr');
@@ -184,11 +196,16 @@
             var td4 = row.find('td:eq(4)').html();
             var td5 = row.find('td:eq(5)').html();
             var td6 = row.find('td:eq(6)').html();
+            var td7 = row.find('td:eq(7)').html();
+            var td8 = row.find('td:eq(8)').html();
 
-            hdproductId.val(td1);
+            hdSupplierId.val(td1);
             ddlOrganizationName.val(td2);
-            ddlProductName.val(td4);
-            ddlStatus.val(td6);
+            disable(ddlOrganizationName.val(td2));
+            ddlSupplierName.val(td4);
+            ddlMobileNumber.val(td5);
+            ddlAddress.val(td6);
+            ddlStatus.val(td8);
             //ddlStatus.prop("checked", false);
             //if (td6.toLowerCase() === 'active') {
             //    ddlStatus.prop("checked", true);
@@ -197,7 +214,7 @@
 
             OpenModal();
             $("#spanModalHead").text('Update Unit');
-            $("#spanSaveTextProduct").text('Update');
+            $("#spanSaveTextSupplier").text('Update');
         })
 
 
@@ -211,9 +228,9 @@
         //}
 
         function OpenModal() {
-            $("#spanModalHeadProduct").text('Add New Product');
-            $("#spanSaveTextProduct").text('Save');
-            $("#modalProduct").modal("show");
+            $("#spanModalHeadSupplier").text('Add New Product');
+            $("#spanSaveTextSupplier").text('Save');
+            $("#modalSupplier").modal("show");
             $(".error").addClass("hide");
         }
         $("#addButton").click(function (e) {
@@ -230,8 +247,12 @@
                 $('.required-ddlOrganization').removeClass("hide");
                 Isvalid = false;
             }
-            if ($.trim(ddlProductName.val()) == 0) {
-                $('.required-ProductName').removeClass("hide");
+            if ($.trim(ddlSupplierName.val()) == "") {
+                $('.required-SupplierName').removeClass("hide");
+                Isvalid = false;
+            }
+            if ($.trim(ddlMobileNumber.val()) == "") {
+                $('.required-MobileNumber').removeClass("hide");
                 Isvalid = false;
             }
 
@@ -239,9 +260,11 @@
 
         }
         function ClearCtrl() {
-            ddlProductName.val("");
+            ddlSupplierName.val("");
             ddlOrganizationName.val('');
-            hdproductId.val('0');
+            hdSupplierId.val('0');
+            ddlMobileNumber.val("");
+            ddlAddress.val("");
 
         }
 
