--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -168,10 +168,12 @@
 
         }
         $("#btnAdd").click(function (e) {
+
             e.preventDefault();
 
-
+            ClearCtrl();
             OpenModal();
+       
             
         })
         ddlDepotNameforSearch.change(function () {
