--- a/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetBankList.cshtml
@@ -19,10 +19,15 @@
         <div class="card card-navy">
             <div class="card-header">
                 <div class="row">
-                    <div class="col-md-2">
-                        <h4>Search By</h4>
+                    
+                        <h4 class="col-md-2">Search By</h4>
+                    
+
+                    <div class="col-md-3">
+                        <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By Any" />
                     </div>
-                    <div class="col-10">
+                   
+                    <div class="col-7 ">
                         <button class="btn btn-outline-primary btn-flat btn-sm float-right" id="clickButton"><i class="fa fa-plus"></i> Create New Bank</button>
                     </div>
                 </div>
@@ -128,7 +133,12 @@
     var ddlMobileNumber = $("#ddlMobileNumber");
     var ddlAccountNumber = $("#ddlAccountNumber");
     var ddlOrganizationName = $("#ddlOrganizationName");
-    
+    var SearchAny = $("#SearchAny");
+
+
+    $(document).ready(function () {
+        LoadBankDataTable()
+    });
 
     function OpenModals() {
         $("#spanModalHeading").text('Create New Bank');
@@ -143,7 +153,51 @@
 
         e.preventDefault();
 
+        clearCtrlBank()
         OpenModals()
+    });
+
+
+    SearchAny.keyup(function () {
+        LoadBankDataTable()
+    })
+
+    function LoadBankDataTable() {
+        var data = { flag: 'BankSetup', name: $.trim(SearchAny.val()) }
+        $.when(getReqWithData(dataType.html, type.get, '/AgroConfiguration/GetBankList', data)).then(function (res, status) {
+            console.log(res);
+            if (status === "success") {
+                $("#dataContainer1").empty();
+                $("#dataContainer1").append(res);
+            }
+        }).fail(function (err) { console.log(err) })
+    }
+
+    $(document).on("click", "a.data-edit-item-Bank", function (e) {
+        e.preventDefault();
+
+        clearCtrlBank();
+
+        var row = $(this).parent().parents('tr');
+        var td1 = row.find('td:eq(1)').html();
+        var td2 = row.find('td:eq(2)').html();
+        var td4 = row.find('td:eq(4)').html();
+        var td5 = row.find('td:eq(5)').html();
+        var td6 = row.find('td:eq(6)').html();
+        var td7 = row.find('td:eq(7)').html();
+        var td9 = row.find('td:eq(9)').html();
+
+        hiddenBankId.val(td1);
+        ddlOrganizationName.val(td2);
+        ddlBankName.val(td4);
+        ddlAccountNumber.val(td5);
+        ddlEmailAddress.val(td6);
+        ddlMobileNumber.val(td7);
+        ddlStatus.val(td9);
+
+        OpenModals();
+        $("#spanModalHeading").text('Update Bank');
+        $("#spanSaveTextBank").text('Update');
     });
 
     $("#bankSaveButton").click(function (e) {
@@ -160,7 +214,7 @@
                 if (res == true) {
                     $("#bankModal").modal("toggle");
                     toastrSuccessAlert(execuStatus.successSave);
-                    
+                    LoadBankDataTable();
                 }
                 else {
                     toastrErrorAlert(execuStatus.fail);
@@ -173,7 +227,7 @@
 
         }
 
-    })
+    });
 
     function ValidationForm() {
         Isvalid = true;
@@ -203,6 +257,15 @@
 
     }
 
+    function clearCtrlBank() {
+        ddlBankName.val("");
+        ddlAccountNumber.val("");
+        ddlMobileNumber.val("");
+        ddlEmailAddress.val("");
+        ddlOrganizationName.val("");
+        hiddenBankId.val('0');
+
+    }
 
     </script>
     
