--- a/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
@@ -1,8 +1,116 @@
 ﻿
-@{
-    ViewBag.Title = "GetMeasurementList";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+<div class="row">
+    <div class="col-md-12">
+        <div class="card card-navy">
+            <div class="card-header" style="text-align: center;">
+              
+                    <div class="row">
+                        <div class="col-md-3">
 
-<h2>GetMeasurementList</h2>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center text-bold">
+
+                                Measurment Setup
+                                </h5>
+                        </div>
+                        <div class="col-md-3">
+
+                        </div>
+
+                    </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <input type="hidden" id="hdMeasurementId" />
+                    <div class="col-md-3">
+                        <label class="control-label font-weight-bold" for="ddlOrganiation">Organization Name</label>
+                        <select class=" form-control form-control-sm" id="ddlOrganiation" name="ddlOrganiation">
+                            <option value="">Select One</option>
+                            <option value="9">Agro Farm</option>
+                        </select>
+
+                    </div>
+                    <div class="col-md-3">
+                        <label class="control-label font-weight-bold " for="measurementName">Measurement Name</label>
+                        <input type="text" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" />
+                    </div>
+                    <div class="col-md-3">
+                        <label class="control-label font-weight-bold " for="masterBox">Master Box</label>
+                        <input type="text" name="masterBox" id="txtmasterBox" class="form-control form-control-sm" />
+                    </div>
+                    <div class="col-md-2">
+                        <label for="innerBox" class="control-label font-weight-bold">Innner Box</label>
+                        <input type="text" id="txtinnerBox" name="innerBox" class="form-control form-control-sm" />
+                    </div>
+                    <div class="col-md-2">
+                        <label class="control-label" for="model">Pack Size</label>
+                        <input type="text" id="txtpackSize" name="packSize" class="form-control form-control-sm">
+                    </div>
+                    <div class="col-md-2">
+                        <label class="control-label" for="model">Unit</label>
+                        <input type="text" id="txtunit" name="unit" class="form-control form-control-sm">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="" class="control-label font-weight-bold" style="visibility:hidden"> Add To List</label>
+                        <div class="clearfix">
+                            <button type="submit" class="btn btn-sm btn-outline-warning" id="addTolist"><i class="fas fa-plus"></i> &nbsp; ADD TO LIST </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12" style="margin-top:-10px">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-md-12" style="overflow-y:scroll">
+                            <table class="table table-bordered table-sm text-sm table-striped table-responsive-lg" id="tblMeasurement">
+                                <thead>
+                                    <tr>
+                                        <th colspan="6">
+                                            <button class="btn btn-outline-success btn-sm float-lg-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i> </button>
+                                        </th>
+                                    </tr>
+                                    <tr class="btn-dark">
+                                        <th>Sl</th>
+                                        <th>Name</th>
+                                        <th>Item</th>
+                                        <th>Unit</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+@section scripts {
+    <script type="text/javascript">
+        var ddlOrganiation = $("#ddlOrganiation");
+        var txtmeasurementName = $("#txtmeasurementName");
+        var txtmasterBox = $("#txtmasterBox");
+        var txtinnerBox = $("#txtinnerBox")
+        var txtpackSize = $("#txtpackSize");
+        var txtunit = $("#txtunit");
+  
+
+    </script>
+
+
+
+    
+    }
+
+    
+
 
