--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterialSupplier.cshtml
@@ -1,1 +1,33 @@
 ﻿
+@{
+    ViewBag.Title = "GetRawMaterialSupplier";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<div class="row text-sm">
+    <div class="col-md-12">
+        <div class="card card-gray">
+            <div class="card-header">
+                <h4>Raw Material Supplier</h4>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card card-navy">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-md-2">
+                        <h4>Search By</h4>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
