--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProductSupplierList.cshtml
@@ -76,7 +76,7 @@
                             <span class="error hide required-SupplierName font-weight-bold">Input Supplier Name!</span>
                         </div>
                         <div class="form-group col-md-12">
-                            <label for="ddlMobileName" class="control-label">Mobile Name</label>
+                            <label for="ddlMobileName" class="control-label">Mobile Number</label>
                             <input type="text" id="ddlMobileNumber" class="form-control form-control-sm" onkeypress="return isNumber(event)" />
                             <span class="error hide required-MobileNumber font-weight-bold">Input Mobile Name!</span>
                         </div>
