--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -6,19 +6,18 @@
 
 <div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12">
-        <div class="card card-gray-dark">
+        <div class="card card-gray shadow">
             <div class="card-header">
                 <div class="row">
-                    @*<div class="col-md-3">
-                            <a href="/Inventory/GetItemPreparation" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
+                    <div class="col-md-3">
+                            @*<a href="#" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
                                 <i class="fas fa-arrow-alt-circle-left"></i>
-                            </a>
-                        </div>*@
+                            </a>*@
+                        </div>
                     <div class="col-md-6">
                         <h5 class="text-center text-bold">Create Finish Good Recipe</h5>
                     </div>
                     <div class="col-md-3">
-                        <button class="btn btn-outline-danger btn-sm float-lg-right" id="btnReset" title="RESET UI"><i class="fas fa-sync-alt"></i> </button>
                     </div>
                 </div>
             </div>
@@ -36,13 +35,13 @@
                                 @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ProductName, "--Select ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                 <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="txtQty" class="col-form-label">ProductQty <span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
                                 <input type="number" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" />
                                 <span class="error hide req-src-Productqty text-bold">ProductQty is required!</span>
                             </div>
                             <div class="col-md-4">
-                                <label class="control-label" for="model">Product Unit</label>
+                                <label class="col-form-label" for="model">Product Unit</label>
                                 <input type="text" id="txtProductunit" name="unit" class="form-control form-control-sm">
                             </div>
                         </div>
@@ -57,13 +56,13 @@
                                 <span class="error hide req-src-RawMaterialName font-weight-bold">RawMaterial Name is required !</span>
 
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="txtRawMaterialQty" class="col-form-label">RawMaterial Qty <span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
                                 <input type="number" placeholder="Qty" name="quantity" id="txtRawMaterialQty" class="form-control form-control-sm" />
                                 <span class="error hide req-src-RawMaterialqty text-bold">RawMaterial Qty is required!</span>
                             </div>
-                            <div class="col-md-4">
-                                <label class="control-label" for="model">RawMaterial Unit</label>
+                            <div class="col-md-3">
+                                <label class="col-form-label" for="model">RawMaterial Unit</label>
                                 <input type="text" id="txtRawMaterialunit" name="unit" class="form-control form-control-sm">
                             </div>
                             <div class="col-md-2">
@@ -94,7 +93,7 @@
                                     <th style="width:8%">#SL</th>
                                     <th style="width:40%">RawMaterial Name</th>
                                     <th style="width:10%">RawMaterial Qty.</th>
-                                    <th style="width:10%">TRawMaterial Unit</th>
+                                    <th style="width:10%">RawMaterial Unit</th>
                                     <th style="width:12%">Action</th>
                                     <th class="hide RawMaterialId"></th>
 
@@ -176,7 +175,7 @@
             var isValid = true;
             $(".error").addClass('hide');
 
-            if (ddlProductName.val() === "") {
+            if ($.trim(ddlProductName.val()) == 0)  {
                 $(".req-ProductName").removeClass('hide');
                 isValid = false;
             }
@@ -198,6 +197,7 @@
 
         function addToList()
         {
+            debugger;
             //disable("#ddlWarehouseSource");
             var sl = $("#tblList tbody tr").length;
 
@@ -205,9 +205,9 @@
             var td1 = "<td class='text-center text-bold'>" + (sl + 1) + "</td>"
             var td2 = "<td>" + dropDownSelectedText("ddlRawMaterialName") + "</td>";
             var td3 = "<td class='text-center text-bold'>" + txtRawMaterialQty.val() + "</td>";
-            var td4 = "<td class='text-center text-bold'>" + txtRawMaterialunit.text() + "</td>";
+            var td4 = "<td class='text-center text-bold'>" + txtRawMaterialunit.val() + "</td>";
             var td5 = "<td class='text-center'><a href='#' class='btn btn-sm btn-warning btn-flat data-onfly-edit'><i class='fas fa-pen'></i></a> <a href='#' class='btn btn-sm btn-danger btn-flat data-onfly-del'><i class='far fa-trash-alt'></i></a></td>";
-            var td6 = "<td class='hide RawMaterialId'>" + RawMaterialId+"</td>";
+            var td6 = "<td class='hide RawMaterialId'>" + ddlRawMaterialName.val()+"</td>";
             //var td8 = "<td class='hide itemType'>" + itemTypeSrc+"</td>";
             //var td9 = "<td class='hide warehouse'>" + ddlWarehouseSource.val() + "</td>";
 
@@ -258,14 +258,16 @@
         })
 
         $("#btnSubmit").click(function (e) {
+            debugger
             e.preventDefault();
-            if (validateAddToList() === true) {
+            if (true === true) {
 
                 bootbox.confirm("Are you sure you want to Save this Recipe", function (result) {
-                    if (result){
+                    if (result) {
+                        debugger;
                         //disable("#btnSubmit");
                         //getTargetItemAndItemTypeAndWarehouse();
-                        var info = { FGRId: 0, FinishGoodProductId: TryParseInt(ddlProductName, 0), FGRQty: txtProductQty.val(), FGRUnit: txtProductunit.val(), RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), FGRRawMaterQty: txtRawMaterialQty.val(), FGRRawMaterUnit:txtRawMaterialunit.val() };
+                        var info = { FGRId: 0, FinishGoodProductId: TryParseInt(ddlProductName.val(), 0), FGRQty: txtProductQty.val(), FGRUnit: txtProductunit.val(), RawMaterialId: TryParseInt(ddlRawMaterialName.val(), 0), FGRRawMaterQty: txtRawMaterialQty.val(), FGRRawMaterUnit:txtRawMaterialunit.val() };
 
                         var details = [];
                         details.length = 0;
@@ -274,9 +276,9 @@
                             var tds = $(this).children('td');
                             details.push({
                                 FGRDetailsId:0,
-                                RawMaterialId: tds.eq(6).html(),
-                                FGRRawMaterQty: tds.eq(3).html(),
-                                FGRRawMaterUnit: tds.eq(4).html()
+                                RawMaterialId: tds.eq(5).html(),
+                                FGRRawMaterQty: tds.eq(2).html(),
+                                FGRRawMaterUnit: tds.eq(3).html()
 
                             });
                         })
